# serializer version: 1
# name: TestQuadXHoverCostEqual.test_snapshot
  -0.00555
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.1
  0.00266
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.10
  -0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.100
  -0.05273
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.101
  0.01608
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.102
  0.01503
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.103
  0.99837
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.104
  0.02558
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.105
  0.02577
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.106
  0.75179
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.107
  0.00139
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.108
  0.00167
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.109
  0.95976
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.11
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.110
  0.90393
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.111
  2.02797
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.112
  -0.35554
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.113
  0.18179
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.114
  0.12791
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.115
  0.14535
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.116
  0.26022
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.117
  0.42273
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.118
  0.15064
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.12
  0.96812
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.120
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.121
  dict({
    'angular_distance': 0.11034,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.0403,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([ 0.00139,  0.00167, -0.04024,  0.10506, -0.0337 ]),
    'state_of_interest': array([ 0.00139,  0.00167,  0.95976, -0.10506,  0.0337 ]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.122
  1.67852
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.123
  -4.76884
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.124
  3.17506
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.125
  -0.03843
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.126
  0.00852
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.127
  0.03291
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.128
  0.99868
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.129
  0.05795
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.130
  0.07284
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.131
  0.9101
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.132
  0.0028
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.133
  0.00484
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.134
  0.97977
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.135
  0.34297
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.136
  -2.74062
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.137
  2.05857
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.138
  0.50533
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.139
  0.52001
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.140
  0.33395
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.141
  0.5919
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.142
  0.52366
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.143
  0.09974
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.144
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.145
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.146
  dict({
    'angular_distance': 0.07875,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.02099,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([ 0.0028 ,  0.00484, -0.02023,  0.07629, -0.01956]),
    'state_of_interest': array([ 0.0028 ,  0.00484,  0.97977, -0.07629,  0.01956]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.17
  0.05045
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.18
  0.05113
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.19
  0.04893
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.2
  0.00149
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.20
  0.04915
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.21
  dict({
    'angular_distance': 0.0002,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.03188,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([-0.000e+00,  0.000e+00, -3.188e-02,  2.000e-04,  1.000e-05]),
    'state_of_interest': array([-0.0000e+00,  0.0000e+00,  9.6812e-01, -2.0000e-04, -1.0000e-05]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.22
  2.73504
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.23
  -1.15221
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.24
  3.00689
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.25
  0.01653
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.26
  -0.00778
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.27
  0.01673
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.28
  0.99969
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.29
  -0.0119
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.3
  -0.0001
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.30
  -0.02399
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.31
  -0.68644
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.32
  -0.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.33
  -1e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.34
  0.94883
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.35
  1.72132
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.36
  -0.38404
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.37
  2.25314
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.38
  0.55789
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.39
  0.41526
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.4
  -1e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.40
  0.47202
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.41
  0.61763
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.42
  0.61109
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.43
  0.08771
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.44
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.45
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.46
  dict({
    'angular_distance': 0.03654,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.05117,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([-0.000e+00, -1.000e-05, -5.117e-02, -3.280e-02,  1.610e-02]),
    'state_of_interest': array([-0.0000e+00, -1.0000e-05,  9.4883e-01,  3.2800e-02, -1.6100e-02]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.47
  -6.33473
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.48
  4.77533
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.49
  1.22051
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.5
  2e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.50
  -0.0106
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.51
  0.02128
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.52
  0.05135
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.53
  0.9984
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.54
  -0.00183
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.55
  -0.02386
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.56
  -0.21796
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.57
  -0.00016
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.58
  -0.00041
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.59
  0.93796
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.6
  1.0
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.60
  -2.54986
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.61
  2.98842
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.62
  1.64079
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.63
  0.62885
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.64
  0.74243
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.65
  0.74297
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.66
  0.54396
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.67
  0.49873
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.68
  0.1096
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.69
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.7
  -1e-05
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.70
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.71
  dict({
    'angular_distance': 0.04756,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.06204,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([-0.00016, -0.00041, -0.06204,  0.01901, -0.0436 ]),
    'state_of_interest': array([-1.6000e-04, -4.1000e-04,  9.3796e-01, -1.9010e-02,  4.3600e-02]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.72
  -1.1477
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.73
  -3.19485
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.74
  -2.65752
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.75
  -0.07008
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.76
  0.01255
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.77
  0.03552
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.78
  0.99683
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.79
  0.02613
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.8
  0.00015
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.80
  -0.03319
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.81
  0.47257
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.82
  0.00023
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.83
  -0.00053
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.84
  0.94202
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.85
  -2.33663
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.86
  -0.31173
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.87
  -0.8118
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.88
  0.74141
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.89
  0.55163
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.9
  -0.76352
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.90
  0.85861
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.91
  0.81836
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.92
  0.71307
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.93
  0.20052
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.94
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.95
  False
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.96
  dict({
    'angular_distance': 0.14253,
    'collision': False,
    'env_complete': False,
    'linear_distance': 0.05798,
    'out_of_bounds': False,
    'reference': array([0., 0., 1., 0., 0.]),
    'reference_error': array([ 0.00023, -0.00053, -0.05798,  0.13934, -0.03   ]),
    'state_of_interest': array([ 2.3000e-04, -5.3000e-04,  9.4202e-01, -1.3934e-01,  3.0000e-02]),
  })
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.97
  0.94212
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.98
  2.75294
# ---
# name: TestQuadXHoverCostEqual.test_snapshot.99
  -0.63675
# ---
